[gd_scene load_steps=7 format=3 uid="uid://cyoqy6p4tv88c"]

[ext_resource type="Script" path="res://script/piece.gd" id="1_x0sth"]
[ext_resource type="PackedScene" uid="uid://bx028wy2lu25i" path="res://scenes/component/outfit_component.tscn" id="4_3st2d"]
[ext_resource type="PackedScene" uid="uid://tahtsvfotixd" path="res://scenes/component/health_component.tscn" id="4_o5vgb"]
[ext_resource type="Texture2D" uid="uid://cnitia133lmjr" path="res://img/piece/3D/white_tri.png" id="5_67nvu"]
[ext_resource type="Texture2D" uid="uid://cocejlgthjmgv" path="res://img/piece/player/red_filter.png" id="5_602r7"]
[ext_resource type="PackedScene" uid="uid://4gn77audskrs" path="res://scenes/component/attack_component.tscn" id="5_rl023"]

[node name="Piece" type="Node2D"]
script = ExtResource("1_x0sth")

[node name="HealthComponent" parent="." instance=ExtResource("4_o5vgb")]

[node name="AttackComponent" parent="." instance=ExtResource("5_rl023")]

[node name="OutfitComponent" parent="." node_paths=PackedStringArray("texture_rect", "player_effect", "control_panel", "move_button", "attack_button") instance=ExtResource("4_3st2d")]
texture_rect = NodePath("../Icon")
player_effect = NodePath("../PlayerEffect")
control_panel = NodePath("../ControlPanel")
move_button = NodePath("../ControlPanel/MoveButton")
attack_button = NodePath("../ControlPanel/AttackButton")

[node name="PlayerEffect" type="TextureRect" parent="."]
offset_right = 80.0
offset_bottom = 80.0
texture = ExtResource("5_602r7")

[node name="Icon" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 88.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_67nvu")

[node name="ControlPanel" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MoveButton" type="Button" parent="ControlPanel"]
layout_mode = 0
offset_top = 1.0
offset_right = 40.0
offset_bottom = 32.0
text = "移動"

[node name="AttackButton" type="Button" parent="ControlPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 1.0
offset_right = 80.0
offset_bottom = 32.0
text = "攻擊"
